[package]
name = "livestore"
version = "0.1.0"
edition = "2024"
authors = ["Rylan W. Yancey"]
description = "Concurrent key-value store with pub/sub capability for Websocket servers."
repository = "https://github.com/RylanYancey/livestore"
license = "MIT OR Apache-2.0"

[dependencies]
boomphf = "0.6.0"
dashmap = "6.1.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "sync", "macros", "time", "signal"] }
uuid = { version = "1.17.0", features = ["v4"] }
